logo and aftermarket alignmnt fixed by 5px(increases)

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -17,13 +17,16 @@ header {
         width: 160px;
         img{
             margin-top: 10px;
-            margin-left: 30px;
+            //margin-left: 30px;
+            margin-left: 35px;
             margin-right: 20px;
             width: 105px;
             //content:url($website_logo);
         }
         p{
-            margin: 5px 0 0 5px;
+            //margin: 5px 0 0 5px;
+            margin: 5px 0 0 10px;
+
             //it was font-size: 16px
             font-size: 15px; 
             color: $color_extreme_two;
